--- a/now_seat.html
+++ b/now_seat.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>即時座位表</title>
+    <title>即時座位資訊</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="seat_css.css">
@@ -41,58 +41,76 @@
 </head>
 
 <body onload="ShowTime()">
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary my-navbar">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">
-                <img class="header-logo" src="https://li.ntou.edu.tw/var/file/29/1029/img/1207/logo.png" alt="ntou logo">
-                海大全興書院-自習室預約系統
-              </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse my-nav-other" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">首頁</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">使用說明</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">意見信箱</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">海大圖資處首頁</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-    </header>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary my-navbar">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img class="header-logo" src="https://li.ntou.edu.tw/var/file/29/1029/img/1207/logo.png" alt="ntou logo">
+            海大全興書院-自習室預約系統
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse my-nav-other" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="https://li.ntou.edu.tw/">海大圖資處首頁</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">使用說明</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">意見信箱</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">登入/註冊</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+</header>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-md-3">
-                <ul class="nav flex-column">
-                    <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">功能選單</a>
-                      </li>
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">即時座位資訊</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">查詢預約狀況</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">個人預約資訊</a>
-                    </li>
-                  </ul>
-            </div>
+<div class="container">
+    <div class="row">
+        <div class="col-12 col-md-3">
+            <ul class="nav flex-column">
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">功能選單</a>
+                  </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="now_seat.html">即時座位資訊</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="search_seat.html">查詢預約狀況</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">個人預約資訊</a>
+                </li>
+              </ul>
+        </div>
             <div class="col-12 col-md-9" >
-                <div id="showbox" style="margin-left:30px;"></div>
+              <div class="row" style="margin-bottom: 10px;">
+                <div class="col-12 col-md-4" style="text-align: center;">
+                  <span id="showbox" ></span>
+                </div>
+                <div class="col-12 col-md-8 col-lg-5 " style="text-align: center;">
+                  <span class="blue-seat" >
+                    <span class="ssi" style="background-color: #00c0EF;">&nbsp;</span>
+                    可預約
+                  </span>
+                  <span class="green-seat" >
+                    <span class="ssi" style="background-color: green;">&nbsp;</span>
+                    已被預約
+                  </span>
+                  <span class="gray-seat">
+                    <span class="ssi" style="background-color: gray;">&nbsp;</span>
+                    不開放
+                  </span>
+                </div>
+              </div>
                 <div class="seat-info">
-                    <img class="seat_background" src="/資料區/座位背景圖.png" alt="座位背景圖">
+                    <img class="seat_background" src="/pic_data/座位背景圖.png" alt="座位背景圖">
                     <div class="group4 g1-4">
                       <a href="#" class="seat_controll seat1">
                         <span>01</span>
