add English version

--- a/now_seat.html
+++ b/now_seat.html
@@ -50,6 +50,8 @@
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
+
+
           </button>
           <div class="collapse navbar-collapse my-nav-other" id="navbarNavDropdown">
             <ul class="navbar-nav">
@@ -64,6 +66,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">登入/註冊</a>
+              </li>
+              <li>
+                <a class="nav-link" href="now_seat_en.html">English</a>
               </li>
             </ul>
           </div>
