--- a/single_seat_info.html
+++ b/single_seat_info.html
@@ -64,6 +64,9 @@
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">登入/註冊</a>
+                  </li class="nav-item">
+                  <li>
+                    <a class="nav-link" href="single_seat_info_en.html">English</a>
                   </li>
                 </ul>
               </div>
