--- a/search_seat.html
+++ b/search_seat.html
@@ -59,6 +59,9 @@
                   <li class="nav-item">
                     <a class="nav-link" href="#">登入/註冊</a>
                   </li>
+                  <li>
+                    <a class="nav-link" href="searh seat_en.html">English</a>
+                  </li>
                 </ul>
               </div>
             </div>
