--- a/search_seat.html
+++ b/search_seat.html
@@ -57,10 +57,10 @@
                     <a class="nav-link" href="#">意見信箱</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">登入/註冊</a>
-                  </li>
-                  <li>
                     <a class="nav-link" href="searh seat_en.html">English</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">登入/註冊</a>
                   </li>
                 </ul>
               </div>
@@ -82,7 +82,7 @@
                       <a class="nav-link" href="search_seat.html">查詢預約狀況</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">個人預約資訊</a>
+                      <a class="nav-link" href="personnal_info.html">個人預約資訊</a>
                     </li>
                   </ul>
             </div>
@@ -116,7 +116,7 @@
                     </span>
                 </form>
                 <div class="seat-info">
-                    <img class="seat_background" src="/pic_data/座位背景圖.png" alt="座位背景圖">
+                    <img class="seat_background" src="pic_data/座位背景圖.png" alt="座位背景圖">
                     <div class="group4 g1-4">
                       <a href="#" class="seat_controll seat1">
                         <span>01</span>
