--- a/searh seat_en.html
+++ b/searh seat_en.html
@@ -57,10 +57,10 @@
                     <a class="nav-link" href="#">Feedback</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Log in/sign up</a>
-                  </li>
-                  <li>
                     <a class="nav-link" href="search_seat.html">中文版</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Log in/sign up</a>
                   </li>
                 </ul>
               </div>
@@ -82,7 +82,7 @@
                       <a class="nav-link" href="searh seat_en.html">Check reservation status</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Personal reservation status</a>
+                      <a class="nav-link" href="personnal_info.html">Personal reservation status</a>
                     </li>
                   </ul>
             </div>
@@ -90,7 +90,7 @@
                 <div class="col-12 col-md-9" style="text-align: center; margin-bottom: 10px;">
                     <span class="blue-seat" >
                       <span class="ssi" style="background-color: #00c0EF;">&nbsp;</span>
-                      Available for Reservation
+                      Available
                     </span>
                     <span class="green-seat" >
                       <span class="ssi" style="background-color: green;">&nbsp;</span>
@@ -98,7 +98,7 @@
                     </span>
                     <span class="gray-seat">
                       <span class="ssi" style="background-color: gray;">&nbsp;</span>
-                      Not Available
+                      disabled
                     </span>
                   </div>
                 <form action="" id="search_info" class="row" style="text-align:center;margin-bottom: 10px;">
@@ -116,7 +116,7 @@
                     </span>
                 </form>
                 <div class="seat-info">
-                    <img class="seat_background" src="/pic_data/座位背景圖.png" alt="座位背景圖">
+                    <img class="seat_background" src="pic_data/座位背景圖.png" alt="座位背景圖">
                     <div class="group4 g1-4">
                       <a href="#" class="seat_controll seat1">
                         <span>01</span>
