--- a/single_seat_info_en.html
+++ b/single_seat_info_en.html
@@ -64,11 +64,11 @@
                     <a class="nav-link" href="#">Feedback</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Log in/sign up</a>
-                  </li class="nav-item">
-                  <li>
                     <a class="nav-link" href="single_seat_info.html">中文版</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Log in/sign up</a>
+                  </li class="nav-item">
                 </ul>
               </div>
             </div>
@@ -89,7 +89,7 @@
                       <a class="nav-link" href="searh seat_en.html">Check reservation status</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">Personal reservation status</a>
+                      <a class="nav-link" href="personnal_info.html">Personal reservation status</a>
                     </li>
                   </ul>
             </div>
@@ -290,7 +290,7 @@
                 </div>
                 <div class="seat-reverse-time">
                     <form action="" id="search_info" class="row" style="text-align:center;margin-bottom: 10px;">
-                        <div class="col-12 col-md-3" style="display: inline-block;" >
+                        <div class="col-12 col-md-4" style="display: inline-block;" >
                             <label for="searcvscode-file://vscode-app/c:/Users/eric9/AppData/Local/Programs/Microsoft%20VS%20Code/resources/app/out/vs/code/electron-sandbox/workbench/workbench.htmlh_date" style="text-align: center;">
                                 Appointment date
                             </label>
