--- a/single_seat_info.html
+++ b/single_seat_info.html
@@ -63,10 +63,10 @@
                     <a class="nav-link" href="#">意見信箱</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">登入/註冊</a>
-                  </li class="nav-item">
-                  <li>
                     <a class="nav-link" href="single_seat_info_en.html">English</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">登入/註冊</a>
                   </li>
                 </ul>
               </div>
@@ -88,7 +88,7 @@
                       <a class="nav-link" href="search_seat.html">查詢預約狀況</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">個人預約資訊</a>
+                      <a class="nav-link" href="personnal_info.html">個人預約資訊</a>
                     </li>
                   </ul>
             </div>
