--- a/sign-in.html
+++ b/sign-in.html
@@ -28,6 +28,9 @@
             </div>
             <div class="row mt-3">
                 <div class="col-4">
+                    <a href="sign-in_en.html" class="link-primary">English</a>
+                </div>
+                <div class="col-4">
                     <a href="register_account.html" class="link-primary">註冊帳號</a>
                 </div>
                 <div class="col-4">
