--- a/single_seat_info_en.html
+++ b/single_seat_info_en.html
@@ -67,7 +67,7 @@
                     <a class="nav-link" href="single_seat_info.html">中文版</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Log in/sign up</a>
+                    <a class="nav-link" href="sign-in_en.html">Log in/sign up</a>
                   </li class="nav-item">
                 </ul>
               </div>
