--- a/single_seat_info.html
+++ b/single_seat_info.html
@@ -66,7 +66,7 @@
                     <a class="nav-link" href="single_seat_info_en.html">English</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">登入/註冊</a>
+                    <a class="nav-link" href="sign-in.html">登入/註冊</a>
                   </li>
                 </ul>
               </div>
