--- a/now_seat.html
+++ b/now_seat.html
@@ -8,6 +8,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="seat_css.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script  language="JavaScript">
+      function ShowTime(){
+          var NowDate=new Date();
+          var mon=NowDate.getMonth();
+          var d=NowDate.getDate();
+          var h=NowDate.getHours();
+          var m=NowDate.getMinutes();
+          document.getElementById('showbox').innerHTML = '現在時間&nbsp'+mon+'/'+d+'&nbsp'+h+'時'+m+'分';
+          setTimeout('ShowTime()',1000);
+      }
+  </script>
+    <script src="nowseat.js"></script>
     <style>
         header{
             background-color: #f8f9fa;
@@ -26,17 +39,7 @@
         }
         
     </style>
-    <script  language="JavaScript">
-        function ShowTime(){
-            var NowDate=new Date();
-            var mon=NowDate.getMonth();
-            var d=NowDate.getDate();
-            var h=NowDate.getHours();
-            var m=NowDate.getMinutes();
-            document.getElementById('showbox').innerHTML = '現在時間&nbsp'+mon+'/'+d+'&nbsp'+h+'時'+m+'分';
-            setTimeout('ShowTime()',1000);
-        }
-    </script>
+    
 </head>
 
 <body onload="ShowTime()">
@@ -67,7 +70,7 @@
                 <a class="nav-link" href="now_seat_en.html">English</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">登入/註冊</a>
+                <a class="nav-link" href="#" id="sign_button">登入/註冊</a>
               </li>
             </ul>
           </div>
