--- a/register_account.html
+++ b/register_account.html
@@ -4,10 +4,12 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" href="signin.css">
+    <script src="register_account.js"></script>
+    
     <title>登入介面</title>
   </head>
   <body class="text-center">
@@ -19,22 +21,22 @@
         
         <form class="login-content  flex-column mt-3">
             <div class="form-floating mb-2">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@mail.ntou.edu.tw">
+                <input type="email" class="form-control r_mail" id="floatingInput" placeholder="name@mail.ntou.edu.tw">
                 <label for="floatingInput">Email address</label>
             </div>
             <div class="form-floating mb-2">
-                <input type="email" class="form-control" id="stringInput" placeholder="user name">
-                <label for="text">User name</label>
+                <input type="text" class="form-control r_user" id="nameInput" placeholder="user name">
+                <label for="nameInput">User name</label>
             </div>
             <div class="form-floating mb-2">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                <input type="password" class="form-control r_password" id="floatingPassword" placeholder="Password">
                 <label for="floatingPassword">Password</label>
             </div>
             <div class="form-floating ">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Confirm Password">
+                <input type="password" class="form-control r_confirm_password"  placeholder="Confirm Password">
                 <label for="floatingPassword">Confirm Password</label>
             </div>
-            <button class="w-100 btn btn-lg btn-primary mt-3" type="submit" >註冊帳戶</button>
+            <button class="w-100 btn btn-lg btn-primary mt-3" type="submit" id="register_btn">註冊帳戶</button>
             <div class="mt-2">
                 <a href="register_account_en.html" class="link-primary">English</a>
             </div>
