--- a/single_seat_info.html
+++ b/single_seat_info.html
@@ -7,8 +7,10 @@
     <title>單一座位查詢</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="search.css">
-    <link rel="stylesheet" href="seat_css.css">
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="single_seat_info.js"></script>
+    <!-- <link rel="stylesheet" href="seat_css.css"> -->
     <style>
         header{
             background-color: #f8f9fa;
@@ -33,11 +35,7 @@
             text-align: center;
         }
     </style>
-    <script  language="JavaScript">
-        $(function(){
-            $('#datepicker').datepicker();
-          });
-    </script>
+
 </head>
 
 <body>
@@ -66,7 +64,7 @@
                     <a class="nav-link" href="single_seat_info_en.html">English</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="sign-in.html">登入/註冊</a>
+                    <a class="nav-link" href="sign-in.html" id="sign_button">登入/註冊</a>
                   </li>
                 </ul>
               </div>
@@ -94,18 +92,18 @@
             </div>
             <div class="col-12 col-md-10" >
                 <div>
-                    <span style="font-size: x-large; font-weight:bolder; margin-right:5px;">座位 07</span>
-                    <span style="font-size: x-large; font-weight:bolder">日期11/14-11/17</span>
+                    <span style="font-size: x-large; font-weight:bolder; margin-right:5px;">座位 <span id="single_seat_id"></span></span>
+                    <span style="font-size: x-large; font-weight:bolder">日期 <span id="single_date"></span> </span>
                 </div>
                 <div class="table-responsive show-seat-info" >
                     <table class="table table-bordered">
                         <thead>
                             <tr>
                               <th scope="col">時間</th>
-                              <th scope="col">11/13</th>
-                              <th scope="col">11/14</th>
-                              <th scope="col">11/15</th>
-                              <th scope="col">11/16</th>
+                              <th scope="col" id="day0">11/13</th>
+                              <th scope="col" id="day1">11/14</th>
+                              <th scope="col" id="day2">11/15</th>
+                              <th scope="col" id="day3">11/16</th>
                             </tr>
                           </thead>
                           <tbody>
@@ -293,7 +291,7 @@
                             <label for="searcvscode-file://vscode-app/c:/Users/eric9/AppData/Local/Programs/Microsoft%20VS%20Code/resources/app/out/vs/code/electron-sandbox/workbench/workbench.htmlh_date" style="text-align: center;">
                                 預約日期
                             </label>
-                            <input type="date" id="search_date" >
+                            <input type="date" id="reserve_date" >
                         </div>
                         <div class="col-12 col-md-3" style="display: inline-block;">
                             <label for="startTime" style="text-align: center;">開始時間</label>
@@ -303,8 +301,8 @@
                             <label for="endTime" style="text-align: center;">結束時間</label>
                             <input type="time" id="endTime">
                         </div>
-                        <div class="col-12 col-md-2" id="check_btn" style="display: inline-block;">
-                            <button>確定預約</button>
+                        <div class="col-12 col-md-2"  style="display: inline-block;">
+                            <button id="check_btn" >確定預約</button>
                         </div>
                     </form>
                     
