--- a/personnal_info.html
+++ b/personnal_info.html
@@ -62,7 +62,7 @@
                     <a class="nav-link" href="searh seat_en.html">English</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">登入/註冊</a>
+                    <a class="nav-link" href="sign-in.html">登入/註冊</a>
                   </li>
                 </ul>
               </div>
