--- a/register.html
+++ b/register.html
@@ -6,43 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script> -->
+    <script src="jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="signin.css">
-    <title>Log In</title>
+    <script src="register.js"></script>
+    <title>註冊介面</title>
   </head>
   <body class="text-center">
     <main>
         <div class="login-head">
             <img class="header-logo" src="https://li.ntou.edu.tw/var/file/29/1029/img/1207/logo.png" alt="ntou logo">
-            <h3 class="mt-3">Quanxing Academy - Self-Study Room Reservation System</h3>
+            <a href="now_seat.html" style="text-decoration:none;">
+                <h3 class="mt-3">海大全興書院-自習室預約系統</h3>
+            </a>
         </div>
         
-        <form class="login-content  flex-column mt-3">
+        <form class="login-content  flex-column mt-3" id="myForm">
             <div class="form-floating mb-2">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@mail.ntou.edu.tw">
+                <input type="email" class="form-control" id="user-mail" placeholder="name@mail.ntou.edu.tw">
                 <label for="floatingInput">Email address</label>
             </div>
             <div class="form-floating mb-2">
-                <input type="email" class="form-control" id="stringInput" placeholder="user name">
-                <label for="text">User name</label>
+                <input type="text" class="form-control" id="user-name" placeholder="User Name">
+                <label for="user-name">User Name</label>
             </div>
             <div class="form-floating mb-2">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                <label for="floatingPassword">Password</label>
+                <input type="password" class="form-control" id="password" placeholder="Password">
+                <label for="password">Password</label>
             </div>
             <div class="form-floating ">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Confirm Password">
-                <label for="floatingPassword">Confirm Password</label>
+                <input type="password" class="form-control" id="confirm-p" placeholder="Confirm Password">
+                <label for="confirm-p">Confirm Password</label>
             </div>
-            <button class="w-100 btn btn-lg btn-primary mt-3" type="submit" >sign up</button>
+            <button class="w-100 btn btn-lg btn-primary mt-3" id="register-btn">註冊</button>
             <div class="mt-2">
-                <a href="register_account.html" class="link-primary">中文</a>
+                <a href="register_en.html" class="link-primary">Endlish</a>
             </div>
             <div class="mt-2">
-                <a href="sign-in_en.html" class="link-primary">Log in</a>
+                <a href="signin.html" class="link-primary">返回登入</a>
             </div>
-            
-
         </form>
     </main>
 
