register error message

--- a/register.html
+++ b/register.html
@@ -39,7 +39,9 @@
                 <input type="password" class="form-control" id="confirm-p" placeholder="Confirm Password">
                 <label for="confirm-p">Confirm Password</label>
             </div>
-            <button class="w-100 btn btn-lg btn-primary mt-3" id="register-btn">註冊</button>
+            <button class="w-100 btn btn-lg btn-primary mt-3" id="register-btn" onclick="check()">註冊</button>
+            <br>
+            username為20個字以內<br>password為8-20個字<br>
             <div class="mt-2">
                 <a href="register_en.html" class="link-primary">Endlish</a>
             </div>
