refactor: renew register,sign,personal

--- a/now_seat.html
+++ b/now_seat.html
@@ -11,12 +11,15 @@
     <script src="jquery-3.6.0.min.js"></script>
     <script  language="JavaScript">
       function ShowTime(){
-          var NowDate=new Date();
-          var mon=NowDate.getMonth();
-          var d=NowDate.getDate();
-          var h=NowDate.getHours();
-          var m=NowDate.getMinutes();
-          document.getElementById('showbox').innerHTML = '現在時間&nbsp'+mon+'/'+d+'&nbsp'+h+'時'+m+'分';
+        var currentDate = new Date();
+        // 获取各种日期和时间组件
+        var year = currentDate.getFullYear();
+        var month = currentDate.getMonth() + 1; // 月份是从0开始的，需要加1
+        var day = currentDate.getDate();
+        var hours = currentDate.getHours();
+        var minutes = currentDate.getMinutes();
+        var seconds = currentDate.getSeconds();
+          document.getElementById('showbox').innerHTML = '現在時間&nbsp'+month+'/'+day+'&nbsp'+hours+'時'+minutes+'分';
           setTimeout('ShowTime()',1000);
       }
   </script>
