--- a/single_seat_info.html
+++ b/single_seat_info.html
@@ -95,7 +95,7 @@
                     <span style="font-size: x-large; font-weight:bolder; margin-right:5px;">座位 <span id="single_seat_id"></span></span>
                     
                 </div>
-                <div class="table-responsive show-seat-info" >
+                <div class="table-responsive show-seat-info" style="margin-bottom: 15px;">
                     <table class="table table-bordered" id="time-table">
                         <thead>
                             <tr>
